--- a/DS4420-starter code.ipynb
+++ b/DS4420-starter code.ipynb
@@ -1833,10 +1833,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "59ca15d6-d9ab-4693-86ec-6a3c3838053b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic 1:\n",
+      "['severe', 'did', 'medication', 'took', 'drug', 'effects', 'taking', 'days', 'day', 'pain']\n",
+      "Topic 2:\n",
+      "['pressure', 'dry', 'face', 'day', 'use', 'effects', 'treatment', 'blood', 'acne', 'skin']\n",
+      "Topic 3:\n",
+      "['medication', 'feel', 'depression', 'time', 'drug', 'sleep', 'mg', 'effects', 'day', 'taking']\n"
+     ]
+    }
+   ],
    "source": [
     "# Topic modeling on reviews\n",
     "if 'reviews' in df2.columns:\n",
